2008-07-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=19928
        Use of CSS3 Namespaces syntax in Selectors API should throw an exception

        * fast/dom/SelectorAPI/not-supported-namespace-in-selector-expected.txt: Added.
        * fast/dom/SelectorAPI/not-supported-namespace-in-selector.html: Added.

2008-07-07  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=19933
        nodeIterator with filter fails on documents not in a frame

        * traversal/node-iterator-009-expected.txt: Added.
        * traversal/node-iterator-009.html: Added.
        * traversal/tree-walker-006-expected.txt: Added.
        * traversal/tree-walker-006.html: Added.

2008-07-07  Adele Peterson  <adele@apple.com>

        Reviewed by Dan Bernstein.

        Test for https://bugs.webkit.org/show_bug.cgi?id=19924
        <rdar://problem/6057160> Disabled file input element updates its displayed file info when a file is dropped from the Finder.

        * fast/forms/dragging-to-disabled-file-input-expected.txt: Added.
        * fast/forms/dragging-to-disabled-file-input.html: Added.

2008-07-07  Adele Peterson  <adele@apple.com>

        Reviewed by Beth.

        Test for <rdar://problem/5860507> <AUDIO> playback noticeably more quiet than QuickTime

        * media/video-volume-expected.txt:
        * media/video-volume.html:

2008-07-07  Beth Dakin  <bdakin@apple.com>

        Reviewed by Anders.

        New test that uses the ability to query int value, min value, and 
        max value in the accessibility tests.

        * accessibility/aria-range-value-expected.txt: Added.
        * accessibility/aria-range-value.html: Added.

2008-07-07  Michelangelo De Simone  <m.des@mac.com>

        Reviewed by Adele.

        Test suite for :read-only and :read-write pseudoclasses, imported from
        Opera.
