@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
+<records date="Mon, 19 Feb 2007 00:40:39 -0800">
+  <movieinfo id="2147">
+    <info>
+      <title>
+        Across the Universe
+      </title>
+      <runtime>
+        2:30
+      </runtime>
+      <rating>
+        Not yet rated
+      </rating>
+      <studio>
+        Sony Pictures
+      </studio>
+      <postdate>
+        2007-02-15
+      </postdate>
+      <releasedate>
+        2007-09-28
+      </releasedate>
+    </info>
+  </movieinfo>
+</records>
